--- a/RCode/171124_ZeroInflatedDataSimulation.Rmd
+++ b/RCode/171124_ZeroInflatedDataSimulation.Rmd
@@ -67,3 +67,151 @@ for (i in c(
   suppressPackageStartupMessages(library(i, character.only = TRUE))
 }
 ```
+
+## Data simulation and setup
+
+```{r setup}
+# code by HKirsten (holgerman)
+# set parameters for simulation, e.g. effect size, n...
+set.seed(0815)
+
+# magnitude of simulated effect  
+effekte = c(0.01,0.02, 0.05, 0.1, 0.3)
+
+# size of simulated data set
+n = 5000
+
+# magnitude of zero-inflation in %
+proz0 = c(20, 50, 80)
+
+# how often should each step be repeated?
+realisierungen = 1000
+
+# type of categories?
+categart = c("quantile","bereiche")
+
+# number of categories
+categnum = c(2:10)
+```
+
+## Create scenarios
+
+```{r create.scenarios}
+# create dt with all scenario combinations
+szenarien <- data.table(expand.grid(effekte = effekte,
+                                    n = n,
+                                    proz0 = proz0,
+                                    categart = categart,
+                                    categnum = categnum))
+szenarien[,num := 1:.N]
+```
+
+## Create data and run lm
+
+```{r test.data}
+# apply over each szenario
+apply(szenarien, 1, function(x) {
+  
+  # x <- szenarien[1, ] # debug
+  # effekt <- x$effekte   # debug
+  # n <- x$n # debug
+  # proz0 <- x$proz0 # debug
+  # categart <- x$categart # debug
+  # categnum <- x$categnum # debug
+  
+  # for readability, assign parameters of each scenario
+  effekt <- as.numeric(x[1])
+  n <- as.numeric(x[2])
+  proz0 <- as.numeric(x[3])
+  categart <- x[4]
+  categnum <- as.numeric(x[5])
+  num <- as.numeric(x[6])
+  
+  # create data for scenario
+  df <- data.table(x = rnorm(n))
+  df[, y := x * effekt + rnorm(n) * (1 - effekt) + 2]
+  
+  # fit lm
+  linmod <- df[, summary(lm(y ~ x))]
+  
+  # add summary statistics
+  res <- data.table(num = num,
+                    effekt = effekt,
+                    n = n,
+                    proz0 = proz0,
+                    categart = categart,
+                    categnum = categnum,
+                    linmod.r2 = linmod$r.squared,
+                    linmod.pval = linmod$coefficients["x","Pr(>|t|)"],
+                    linmod.beta = linmod$coefficients["x","Estimate"])
+  
+  # create zero-inflated y-derived data
+  df[, y.0infl := y]
+  df[y < quantile(y.0infl, probs = proz0/100), y.0infl := 0]
+  min.found = df[y.0infl > 0, min(y.0infl)]
+  df[y.0infl > 0, y.0infl := y.0infl - 0.99*min.found]
+  
+  # check
+  # df[,.N,y_0infl==0]
+  # hist(df$y.0infl, breaks = 50)
+  
+  # sort by y (category)
+  setorder(df, y)
+  
+  # create categories to calculate polr/ordinal over
+  if(categart == "quantile") {
+    
+    # categorisation over quantiles
+    df[y.0infl > 0, y.0infl.categ := cut(y.0infl, breaks = quantile(y.0infl, probs = seq(0, 1, 1/categnum)), include.lowest = T)]
+    categs.created = df[, levels(y.0infl.categ)]
+    df[y.0infl == 0, y.0infl.categ := factor(0, labels =  "[0]")]
+    df[, y.0infl.categ := factor(y.0infl.categ, levels = c("[0]", categs.created))]
+  } else if(categart == "bereiche"){
+    
+    # category separating over range
+#     df[y.0infl > 0, y.0infl.categ := cut(y.0infl, breaks = quantile(y.0infl, probs = seq(0, 1, 1/categnum)), include.lowest = T)]
+#     categs.created = df[, levels(y.0infl.categ)]
+#     df[y.0infl == 0, y.0infl.categ := factor(0, labels =  "[0]")]
+#     df[, y.0infl.categ := factor(y.0infl.categ, levels = c("[0]", categs.created))]
+    
+  } else {
+    stop("Error")
+  }
+  
+})
+
+#===================================================================#
+#Code template
+#===================================================================#
+
+myzeile  = x
+df = data.table(x = rnorm(myzeile$n))
+df[,y := x*myzeile$effekte + rnorm(myzeile$n)*(1- myzeile$effekte) +2]
+
+linmod = df[,summary(lm(y~x))]
+myzeile$linmod_r2 = linmod$r.squared
+myzeile$linmod_pval = linmod$coefficients["x","Pr(>|t|)"]
+myzeile$linmod_beta = linmod$coefficients["x","Estimate"]
+
+df[,y_0infl := y]
+df[ y<quantile(y_0infl, probs = myzeile$proz0/100), y_0infl := 0]
+min_found = df[ y_0infl > 0, min(y_0infl)]
+df[ y_0infl > 0, y_0infl := y_0infl - 0.99*min_found]
+
+df[,.N,y_0infl==0]
+
+# hist(df$y_0infl, breaks = 50)
+
+setorder(df, y)
+if(myzeile$categart == "quantile") {
+  df[y_0infl > 0, y_0infl_categ := cut(y_0infl, breaks = quantile(y_0infl, probs = seq(0,1,1/myzeile$categnum)), include.lowest = T)]
+  categs_created = df[,levels(y_0infl_categ)]
+  df[y_0infl == 0, y_0infl_categ := factor(0, labels =  "[0]")]
+  df[, y_0infl_categ := factor(y_0infl_categ, levels = c("[0]", categs_created))]
+  }
+
+
+## dichotomisiert 0 vs not 0 als glm
+
+
+```
