--- a/RCode/171124_ZeroInflatedDataSimulation.Rmd
+++ b/RCode/171124_ZeroInflatedDataSimulation.Rmd
@@ -38,7 +38,7 @@ setwd(basicpath)
 pathwd <-
   paste0(
     basicpath,
-    "genstat/02_projekte/1703_ge_metab_a1_b3_sorbs/171121_a1_b3_sorb_GxProbeAnnotTab"
+    "genstat/02_projekte/1703_ge_metab_a1_b3_sorbs/171124_ZeroInflatedDataSim"
   )
 setwd(pathwd)
 
@@ -54,7 +54,7 @@ newest_rprofile()
 
 # start time measurement, define alternative package directory, define start codes for external start of the script
 if (r_on_server == T) {
-  initializeSkript(myfilename = filename, computer = "dunhargRRO") # enter which server you are on
+  initializeSkript(myfilename = filename, computer = "forostar") # enter which server you are on
 } else
   initializeSkript(myfilename = filename, computer = "local")
 
@@ -64,7 +64,8 @@ for (i in c(
   "data.table",
   "broom",
   "ordinal",
-  "MASS"
+  "MASS",
+  "parallel"
 )) {
   suppressPackageStartupMessages(library(i, character.only = TRUE))
 }
@@ -89,8 +90,8 @@ proz0 = c(20, 50, 80)
 # how often should each step be repeated?
 realisierungen = 1000
 
-# type of categories?
-categart = c("quantile","bereiche")
+# type of categories
+categart = c("quantile", "bereiche")
 
 # number of categories
 categnum = c(2:10)
@@ -104,7 +105,8 @@ szenarien <- data.table(expand.grid(effekte = effekte,
                                     n = n,
                                     proz0 = proz0,
                                     categart = categart,
-                                    categnum = categnum))
+                                    categnum = categnum,
+                                    realization = 1:realisierungen))
 szenarien[,num := 1:.N]
 ```
 
@@ -112,23 +114,18 @@ szenarien[,num := 1:.N]
 
 ```{r test.data}
 # apply over each szenario
-apply(szenarien, 1, function(x) {
+res <- mclapply(szenarien$num[1:5],  function(x) {
   
-#   x <- szenarien[268, ] # debug
-#   effekt <- x$effekte   # debug
-#   n <- x$n # debug
-#   proz0 <- x$proz0 # debug
-#   categart <- x$categart # debug
-#   categnum <- x$categnum # debug
-#   num <- x$num # debug
+  x <- szenarien[num == x]
   
-  # for readability, assign parameters of each scenario
-  effekt <- as.numeric(x[1])
-  n <- as.numeric(x[2])
-  proz0 <- as.numeric(x[3])
-  categart <- x[4]
-  categnum <- as.numeric(x[5])
-  num <- as.numeric(x[6])
+  # x <- szenarien[268, ] # debug
+  effekt <- x$effekte
+  n <- x$n
+  proz0 <- x$proz0
+  categart <- x$categart
+  categnum <- x$categnum
+  num <- x$num 
+  real <-  x$realization
   
   # create data for scenario
   df <- data.table(x = rnorm(n))
@@ -139,6 +136,7 @@ apply(szenarien, 1, function(x) {
   
   # add summary statistics
   res <- data.table(num = num,
+                    realization = real,
                     effekt = effekt,
                     n = n,
                     proz0 = proz0,
@@ -155,7 +153,7 @@ apply(szenarien, 1, function(x) {
   df[y.0infl > 0, y.0infl := y.0infl - 0.99*min.found]
   
   # check
-  # df[,.N,y_0infl==0]
+  # df[,.N,y.0infl==0]
   # hist(df$y.0infl, breaks = 50)
   
   # sort by y (category)
@@ -183,53 +181,44 @@ apply(szenarien, 1, function(x) {
   
   # now we have the complete data and start fitting the model
   # start with fitting the regular glm for a dichotomized y
-  linmod.dicho <- df[, summary(glm(y.0infl > 0 ~ x))]
+  linmod.dicho <- df[, summary(glm(y.0infl > 0 ~ x, family = "binomial"))]
+  linmod.dicho.coefs <- setDT(as.data.frame(coefficients(linmod.dicho)), keep.rownames = T)
+  linmod.dicho.pval <- unlist(linmod.dicho.coefs[rn == "x", "Pr(>|z|)"])
+  linmod.dicho.beta <- unlist(linmod.dicho.coefs[rn == "x","Estimate"])
   
   # enter results
-  res[, `:=`(dicho.pval = linmod.dicho$coefficients["x", "Pr(>|t|)"],
-             dicho.beta = linmod.dicho$coefficients["x","Estimate"])]
+  res[, `:=`(dicho.pval = linmod.dicho.pval,
+             dicho.beta = linmod.dicho.beta,
+             dicho.AIC = linmod.dicho$aic)]
   
   # fit the ordinal proportional odds model
-  df[, MASS::polr(y.0infl.categ ~ x)]
-  df[, ordinal::clm(y.0infl.categ ~ x)]
-
+  logit.mod <- df[, summary(ordinal::clm(y.0infl.categ ~ x))]
+  logit.mod.2 <- df[, ordinal::clm(y.0infl.categ ~ x)]
+  logit.coefs <- setDT(as.data.frame(logit.mod$coefficients), keep.rownames = T)
+  logit.pval <- unlist(logit.coefs[rn == "x", "Pr(>|z|)"])
   
-})
-```
+  # enter results
+  res[, `:=`(logit.beta = logit.mod.2$beta,
+             logit.pval = logit.pval,
+             logit.AIC = as.numeric(logit.mod.2$info$AIC))]
+  
+  return(res)
+}, mc.cores = 10, mc.cleanup = T)
 
-```{r template, include=F}
-#===================================================================#
-#Code template
-#===================================================================#
-
-myzeile  = x
-df = data.table(x = rnorm(myzeile$n))
-df[,y := x*myzeile$effekte + rnorm(myzeile$n)*(1- myzeile$effekte) +2]
-
-linmod = df[,summary(lm(y~x))]
-myzeile$linmod_r2 = linmod$r.squared
-myzeile$linmod_pval = linmod$coefficients["x","Pr(>|t|)"]
-myzeile$linmod_beta = linmod$coefficients["x","Estimate"]
-
-df[,y_0infl := y]
-df[ y<quantile(y_0infl, probs = myzeile$proz0/100), y_0infl := 0]
-min_found = df[ y_0infl > 0, min(y_0infl)]
-df[ y_0infl > 0, y_0infl := y_0infl - 0.99*min_found]
-
-df[,.N,y_0infl==0]
-
-# hist(df$y_0infl, breaks = 50)
-
-setorder(df, y)
-if(myzeile$categart == "quantile") {
-  df[y_0infl > 0, y_0infl_categ := cut(y_0infl, breaks = quantile(y_0infl, probs = seq(0,1,1/myzeile$categnum)), include.lowest = T)]
-  categs_created = df[,levels(y_0infl_categ)]
-  df[y_0infl == 0, y_0infl_categ := factor(0, labels =  "[0]")]
-  df[, y_0infl_categ := factor(y_0infl_categ, levels = c("[0]", categs_created))]
-  }
-
-
-## dichotomisiert 0 vs not 0 als glm
-
+# bind everything together
+all.scenarios <- rbindlist(res)
 
 ```
+
+```{r save}
+# Save for use in STEP2
+write.table(x = all.scenarios,
+            file = paste0(pathwd, "/results/",
+                          format(Sys.time(), '%y%m%d'),
+                          "_SimulationResults.csv"),
+            sep = "\t", row.names = F)
+```
+
+```{r SessionInfo, echo=F, results='markup'}
+sessionInfo()
+```            
