--- a/RCode/171124_ZeroInflatedDataExploration_STEP2.Rmd
+++ b/RCode/171124_ZeroInflatedDataExploration_STEP2.Rmd
@@ -28,7 +28,7 @@ This script is a small data simulation to help figure out an appropriate data tr
 
 ```{r initiate, cache = F, results = "hide", echo = F}
 # choose correct working directory
-r_on_server <- F
+r_on_server <- T
 if (r_on_server == T) {
   basicpath <- "/net/ifs1/san_projekte/projekte/"
 } else {
@@ -136,8 +136,8 @@ multiplot <- function(..., plotlist=NULL, file, cols=1, layout=NULL) {
 ## Plot pvalues against each other
 
 ```{r explore}
-# pvalues plotted against linmod pvalues for different effect sizes
-pdf("/mnt/ifs1_projekte/genstat/02_projekte/1703_ge_metab_a1_b3_sorbs/171124_ZeroInflatedDataSim/plots/171128_pvalPlots.pdf", width = 21)
+# dicho pvalues plotted against linmod pvalues for different effect sizes
+pdf("/mnt/ifs1_projekte/genstat/02_projekte/1703_ge_metab_a1_b3_sorbs/171124_ZeroInflatedDataSim/plots/171128_dicho&LogitVsLinmodPvalsPerEffekt.pdf", width = 21)
 lapply(unique(all.scenarios$effekt), function(x){
   
   p1 <- ggplot(all.scenarios[proz0 == 20 & effekt == x, ], aes(linmod.pval, dicho.pval, colour = logit.pval)) +
@@ -163,7 +163,7 @@ lapply(unique(all.scenarios$effekt), function(x){
 dev.off()
 
 # dicho.pval ~ logit.pval
-pdf("/mnt/ifs1_projekte/genstat/02_projekte/1703_ge_metab_a1_b3_sorbs/171124_ZeroInflatedDataSim/plots/171128_logitVsDicho.pdf", width = 21)
+pdf("/mnt/ifs1_projekte/genstat/02_projekte/1703_ge_metab_a1_b3_sorbs/171124_ZeroInflatedDataSim/plots/171128_logitVsDichoPvalsPerEffect&0infl.pdf", width = 21)
 lapply(unique(all.scenarios$proz0), function(y){
   lapply(unique(all.scenarios$effekt), function(x){
   
@@ -181,7 +181,7 @@ dev.off()
 
 # filter by pvalue, e.g. only those with high dicho pval etc
 # dicho.pval ~ logit.pval
-pdf("/mnt/ifs1_projekte/genstat/02_projekte/1703_ge_metab_a1_b3_sorbs/171124_ZeroInflatedDataSim/plots/171128_logitVsDichoFDRFiltered.pdf", width = 21)
+pdf("/mnt/ifs1_projekte/genstat/02_projekte/1703_ge_metab_a1_b3_sorbs/171124_ZeroInflatedDataSim/plots/171128_logitVsDichoPvalsPerEffect&0infl&FDRFiltered", width = 21)
 lapply(unique(all.scenarios$proz0), function(y){
   lapply(unique(all.scenarios$effekt), function(x){
   
@@ -197,12 +197,106 @@ ggplot(all.scenarios[proz0 == y & effekt == x & linmod.fdr <= 0.05, ], aes(logit
 })
 dev.off()
 
-# look at boxplot of pval-distribution (raw/fdr-corrected)
-
-
-
 # number of categories as deciding factor
+all.scenarios[linmod.fdr <= 0.05, sum(logit.fdr <= 0.05), by = .(categart,categnum)]
+all.scenarios[linmod.fdr <= 0.05, sum(dicho.fdr <= 0.05), by = .(categart,categnum)]
+```
 
+```{r boxplots}
+# based on fdr-corrected linmod pvals, show boxplot of pvalue distribution of all three methods
+test <- melt(data = all.scenarios[linmod.fdr <= 0.05, ], id.vars = c("effekt", "proz0", "categart", "categnum"), measure.vars = c("dicho.pval", "linmod.pval", "logit.pval"))
+
+# for all linmod.fdr <= 0.05 plot the pvalue distribution for each effekt and zero-inflation percentage
+pdf("/mnt/ifs1_projekte/genstat/02_projekte/1703_ge_metab_a1_b3_sorbs/171124_ZeroInflatedDataSim/plots/171128_logitVsDichoPvalsBoxPlotByLinmodFDR005.pdf")
+
+# outer loop for proz0
+lapply(unique(all.scenarios$proz0), function(y){
+  
+  # inner loop for effect size
+  lapply(unique(all.scenarios$effekt), function(x){
+    
+    ggplot(test[proz0 == y & effekt == x], aes(x = as.factor(categnum), y = value, fill = variable)) + 
+      geom_boxplot() + coord_flip() + 
+      facet_wrap( ~ categart, scales = "free_x") + 
+      scale_fill_brewer(palette="Spectral") +
+      ggtitle(label = "dicho, logit & linmod pvalues for linmod.pval FDR <= 0.05", subtitle = paste0("Effect-size = ", x, " and zero-inflation by ", y, "%")) +
+      theme_minimal()
+  })
+})
+
+dev.off()
+
+
+# show boxplot of pvalue distribution of all three methods for all pvalues
+test.2 <- melt(data = all.scenarios, id.vars = c("effekt", "proz0", "categart", "categnum"), measure.vars = c("dicho.pval", "linmod.pval", "logit.pval"))
+
+# for all linmod.fdr <= 0.05 plot the pvalue distribution 
+pdf("/mnt/ifs1_projekte/genstat/02_projekte/1703_ge_metab_a1_b3_sorbs/171124_ZeroInflatedDataSim/plots/171128_logitVsDichoBoxRawPvals.pdf")
+
+# outer loop for proz0
+lapply(unique(all.scenarios$proz0), function(y){
+  
+  # inner loop for effect size
+  lapply(unique(all.scenarios$effekt), function(x){
+    
+    ggplot(test.2[proz0 == y & effekt == x], aes(x = as.factor(categnum), y = value, fill = variable)) + 
+      geom_boxplot() + coord_flip() + 
+      facet_wrap( ~ categart, scales = "free_x") + 
+      scale_fill_brewer(palette="Spectral") +
+      ggtitle(label = "dicho, logit & linmod pvalues", subtitle = paste0("Effect-size = ", x, " and zero-inflation by ", y, "%")) +
+      theme_minimal()
+  })
+})
+
+dev.off()
+
+# boxplot of FDR pvals for all linmod FDR <= 0.05 
+test.3 <- melt(data = all.scenarios[linmod.fdr <= 0.05, ], id.vars = c("effekt", "proz0", "categart", "categnum"), measure.vars = c("dicho.fdr", "linmod.fdr", "logit.fdr"))
+
+# for all linmod.fdr <= 0.05 plot the pvalue distribution for each effekt and zero-inflation percentage
+pdf("/mnt/ifs1_projekte/genstat/02_projekte/1703_ge_metab_a1_b3_sorbs/171124_ZeroInflatedDataSim/plots/171128_logitVsDichoFDRPvalsBoxPlotByLinmodFDR005.pdf")
+
+# outer loop for proz0
+lapply(unique(all.scenarios$proz0), function(y){
+  
+  # inner loop for effect size
+  lapply(unique(all.scenarios$effekt), function(x){
+    
+    ggplot(test.3[proz0 == y & effekt == x], aes(x = as.factor(categnum), y = value, fill = variable)) + 
+      geom_boxplot() + coord_flip() + 
+      facet_wrap( ~ categart, scales = "free_x") + 
+      scale_fill_brewer(palette="Spectral") +
+      ggtitle(label = "dicho, logit & linmod FDR pvalues for linmod.pval FDR <= 0.05", subtitle = paste0("Effect-size = ", x, " and zero-inflation by ", y, "%")) +
+      theme_minimal()
+  })
+})
+
+dev.off()
+```
+
+```{r zoom.in}
+# logit seems to outperform dicho glm
+# look more closely at logit vs lm
+# betas correlate well
+ggplot(all.scenarios[effekt == 0.01 & proz0 == 20 & categart == "quantile" & categnum == 2, ], aes(x = linmod.beta, y = logit.beta)) +
+  geom_point()
+
+# pvalues not so much
+ggplot(all.scenarios[effekt == 0.01 & proz0 == 20 & categart == "quantile" & categnum == 2, ], aes(x = linmod.pval, y = logit.pval)) +
+  geom_point()
+
+# check out other statistics 
+test.4 <- melt(data = all.scenarios[linmod.fdr <= 0.05, ], id.vars = c("effekt", "proz0", "categart", "categnum"), measure.vars = c("linmod.fdr", "logit.fdr", "logit.pval", "linmod.pval", "linmod.r2", "linmod.beta", "logit.beta"))
+
+pdf("/mnt/ifs1_projekte/genstat/02_projekte/1703_ge_metab_a1_b3_sorbs/171124_ZeroInflatedDataSim/plots/171130_logitPvalsByEffectPerCategory.pdf", height = 14)
+# look at logit pvals 
+ggplot(test.4[proz0 == 20 & effekt %in% c(0.01, 0.02, 0.05) & variable == "logit.pval", ], aes(y= value, x = as.factor(categnum), fill = as.factor(effekt))) +
+  geom_boxplot() +
+  facet_grid( ~ as.factor(categart)) + 
+  coord_flip(ylim = c(0,0.1)) +
+  scale_fill_brewer(palette="Spectral") +
+  theme_minimal()
+dev.off()
 ```
 
 ```{r save}
